--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     },  
 
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "PRABATH-MD~2Wp0kTgR#ZYldfQyDHCLtdjwOyWCOE101GmRa4oLEhZKh7a5p5E4",
       "required": false
     },  
 
